Updates to hook up requirejs.

--- a/app/templates/common/html/foot.jade
+++ b/app/templates/common/html/foot.jade
@@ -6,7 +6,7 @@ l = {"locals": locals}
 - for ( i in locals.javascriptModules )
   - locals.javascriptModules[i] = 'modules/' + locals.javascriptModules[i] + '/index'
 
-script
+script.
   require(["js/common"], function () {
     require(["require/index"], function(){
       require(!{JSON.stringify(l.locals.javascriptModules)});
