--- a/app/templates/mocha/index.jade
+++ b/app/templates/mocha/index.jade
@@ -14,21 +14,21 @@ html
       // END: FIXTURES
 
     script(src='lib/mocha/mocha.js')
-    script
+    script.
       mocha.ui('bdd');
       mocha.bail(false);
       mocha.reporter('html');
 
     // assertion framework
     script(src='lib/chai.js')
-    script
+    script.
       var assert = chai.assert
 
-    script(src='js/libs/require.js')
+    script(src='../../bower_components/requirejs/require.js')
 
-    script
-      require(["js/common"], function () {
-        require(["require/index"], function(){
+    script.
+      require(["../../common/js/common.js"], function () {
+        require(["secondary/index"], function(){
           require([
             // START: SPECS
             // END: SPECS
@@ -37,4 +37,3 @@ html
           });
         });
       });
-    script
