fixing up unit tests.

--- a/app/templates/mocha/index.jade
+++ b/app/templates/mocha/index.jade
@@ -28,7 +28,7 @@ html
     script.
       require(["/js/common.js"], function () {
         require(["secondary/index"], function(){
-          require(!{JSON.stringify(getTestableModules())}, function(){
+          require(!{JSON.stringify(getTestableModules('mocha'))}, function(){
             mocha.run()
           });
         });
