--- a/module/templates/_module-demo.jade
+++ b/module/templates/_module-demo.jade
@@ -14,6 +14,6 @@ body
 
   !{renderSingle('app/modules/<%= _.dasherize(moduleName) %>/html/<%= _.dasherize(moduleName) %>.jade', 'app/modules/<%= _.dasherize(moduleName) %>/demo/data/<%= _.dasherize(moduleName) %>.json')}
 
-  include ../../../common/html/foot.jade
+  !{renderSingle('app/common/html/foot.jade')}
 </html>
 
