--- a/app/templates/mocha/index.jade
+++ b/app/templates/mocha/index.jade
@@ -21,7 +21,8 @@ html
     // assertion framework
     script(src='lib/chai.js')
     script.
-      var assert = chai.assert
+      var assert = chai.assert;
+      var expect = chai.expect;
 
     script(src='/bower_components/requirejs/require.js')
 
