--- a/app/templates/mocha/index.jade
+++ b/app/templates/mocha/index.jade
@@ -9,8 +9,10 @@ html
 
     #mocha
 
-    #fixtures
-      !{getFixtures()}
+    #fixtures(style="display:none;")
+      each module in getTestableModules('mocha')
+        - moduleName = module.split('/')[1]
+        !{renderSingle('app/modules/'+moduleName+'/html/'+moduleName+'.jade', 'app/modules/'+moduleName+'/demo/data/'+moduleName+'.json')}
 
     script(src='lib/mocha/mocha.js')
     script.
